get the SIMPLE_OPTIMIZATIONS working
Had to move the generated sources to the src directory since the module names need to match
Now start trying with advanced optimizations... broken :(

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "angularCompilerOptions": {
-        "genDir": "gen",
         "googleClosureOutput": true
     },
     "compilerOptions": {
@@ -11,11 +10,7 @@
         "sourceMap": false,
         "experimentalDecorators": true,
         "outDir": "built",
-        "declaration": true,
-        "rootDirs": [
-            "src",
-            "gen"
-        ]
+        "declaration": true
     },
     "exclude": [
         "node_modules",
