--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@angular/core": "file:vendor/angular/core",
     "@angular/platform-browser": "file:vendor/angular/platform-browser",
     "@angular/platform-server": "file:vendor/angular/platform-server",
+    "google-closure-compiler": "^20160315.2.0",
     "rxjs": "^5.0.0-beta.6",
     "rxjs-es": "file:vendor/RxJS",
     "typescript": "^1.9.0-dev.20160502",
@@ -17,6 +18,7 @@
   },
   "devDependencies": {},
   "scripts": {
+    "postinstall": "cp vendor/closure/compiler.jar node_modules/google-closure-compiler",
     "build": "ngc && ./build_closure.sh"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angularjs.org/)",
