--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "rxjs": "5.0.0-rc.4",
     "tsickle": "^0.2.3",
     "typescript": "~2.0",
-    "zone.js": "~0.7"
+    "zone.js": "angular/zone.js"
   },
   "scripts": {
     "build": "ngc && ./build_closure.sh"
