--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@angular/tsc-wrapped": "alexeagle/tsc-wrapped-builds",
     "google-closure-compiler": "^20161024.3.0",
     "rxjs": "5.0.0-rc.4",
+    "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
     "typescript": "~2.0",
     "zone.js": "angular/zone.js"
   },
   "scripts": {
-    "build": "ngc && ./build_closure.sh"
+    "build": "ngc && ./build_closure.sh",
+    "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angularjs.org/)",
   "license": "MIT"
