--- a/package.json
+++ b/package.json
@@ -4,16 +4,16 @@
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "main": "index.js",
   "devDependencies": {
-    "@angular/common": "alexeagle/common-builds",
-    "@angular/compiler": "alexeagle/compiler-builds",
-    "@angular/compiler-cli": "alexeagle/compiler-cli-builds",
-    "@angular/core": "alexeagle/core-builds",
-    "@angular/platform-browser": "alexeagle/platform-browser-builds",
-    "@angular/platform-server": "alexeagle/platform-server-builds",
-    "@angular/tsc-wrapped": "alexeagle/tsc-wrapped-builds",
+    "@angular/common": "angular/common-builds#master-es2015",
+    "@angular/compiler": "angular/compiler-builds#master-es2015",
+    "@angular/compiler-cli": "angular/compiler-cli-builds#master-es2015",
+    "@angular/core": "angular/core-builds#master-es2015",
+    "@angular/platform-browser": "angular/platform-browser-builds#master-es2015",
+    "@angular/platform-server": "angular/platform-server-builds#master-es2015",
+    "@angular/tsc-wrapped": "angular/tsc-wrapped-builds#master-es2015",
     "@types/node": "^7.0.0",
-    "google-closure-compiler": "^20161201.0.0",
-    "rxjs": "5.0.0-rc.4",
+    "google-closure-compiler": "^20170124.0.0",
+    "rxjs": "5.0.1",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
     "typescript": "~2.0",
@@ -23,6 +23,6 @@
     "build": "ngc && ./build_closure.sh",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
-  "author": "Alex Eagle <alexeagle@google.com> (https://angularjs.org/)",
+  "author": "Alex Eagle <angular@google.com> (https://angularjs.org/)",
   "license": "MIT"
 }
