--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "rxjs": "5.0.1",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
-    "typescript": "~2.0",
+    "typescript": "~2.1",
     "zone.js": "angular/zone.js"
   },
   "scripts": {
+    "postinstall": "tsc -p vendor/tsconfig.rxjs-vanilla-es6.json",
     "build": "ngc && ./build_closure.sh",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
