--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "zone.js": "angular/zone.js"
   },
   "scripts": {
-    "postinstall": "tsc -p vendor/tsconfig.rxjs-vanilla-es6.json",
+    "build_rxjs_es5esm": "tsc -p vendor/tsconfig.rxjs-es5+esm.json",
+    "build_rxjs_es6": "tsc -p vendor/tsconfig.rxjs-es6.json",
+    "build_rxjs_tsickle": "node ./node_modules/@angular/tsc-wrapped/src/main -p vendor/tsconfig.rxjs-tsickle.json",
+    "postinstall": "build_rxjs_es5esm",
     "build": "ngc && ./build_closure.sh",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
