--- a/package.json
+++ b/package.json
@@ -4,14 +4,13 @@
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "main": "index.js",
   "devDependencies": {
-    "@angular/common": "angular/common-builds#master-es2015",
-    "@angular/compiler": "angular/compiler-builds#master-es2015",
-    "@angular/compiler-cli": "angular/compiler-cli-builds#master-es2015",
-    "@angular/core": "angular/core-builds#master-es2015",
-    "@angular/platform-browser": "angular/platform-browser-builds#master-es2015",
-    "@angular/platform-server": "angular/platform-server-builds#master-es2015",
-    "@angular/tsc-wrapped": "angular/tsc-wrapped-builds#master-es2015",
-    "@types/node": "^7.0.0",
+    "@angular/common": "angular/common-builds",
+    "@angular/compiler": "angular/compiler-builds",
+    "@angular/compiler-cli": "angular/compiler-cli-builds",
+    "@angular/core": "angular/core-builds",
+    "@angular/platform-browser": "angular/platform-browser-builds",
+    "@angular/platform-server": "angular/platform-server-builds",
+    "@angular/tsc-wrapped": "angular/tsc-wrapped-builds",
     "google-closure-compiler": "^20170124.0.0",
     "rxjs": "5.0.1",
     "source-map-explorer": "^1.3.3",
