--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@angular/platform-server": "angular/platform-server-builds",
     "@angular/tsc-wrapped": "angular/tsc-wrapped-builds",
     "google-closure-compiler": "^20170124.0.0",
-    "rxjs": "5.0.1",
+    "rxjs": "5.0.3",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
     "typescript": "~2.1",
@@ -26,6 +26,6 @@
     "build": "ngc && ./build_closure.sh",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
-  "author": "Alex Eagle <angular@google.com> (https://angularjs.org/)",
+  "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
   "license": "MIT"
 }
