--- a/package.json
+++ b/package.json
@@ -4,14 +4,14 @@
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "main": "index.js",
   "devDependencies": {
-    "@angular/common": "angular/common-builds",
-    "@angular/compiler": "angular/compiler-builds",
-    "@angular/compiler-cli": "angular/compiler-cli-builds",
-    "@angular/core": "angular/core-builds",
-    "@angular/platform-browser": "angular/platform-browser-builds",
-    "@angular/platform-server": "angular/platform-server-builds",
-    "@angular/tsc-wrapped": "angular/tsc-wrapped-builds",
-    "google-closure-compiler": "^20170124.0.0",
+    "@angular/common": "^4.0.1",
+    "@angular/compiler": "^4.0.1",
+    "@angular/compiler-cli": "^4.0.1",
+    "@angular/core": "^4.0.1",
+    "@angular/platform-browser": "^4.0.1",
+    "@angular/platform-server": "^4.0.1",
+    "@angular/tsc-wrapped": "^4.0.1",
+    "google-closure-compiler": "20170218.0.0",
     "rxjs": "5.0.3",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
