--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "compiler_cli_user",
+  "name": "closure-compiler-angular-bundling",
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
-  "main": "index.js",
   "devDependencies": {
     "@angular/common": "^4.0.1",
     "@angular/compiler": "^4.0.1",
@@ -12,7 +11,8 @@
     "@angular/platform-server": "^4.0.1",
     "@angular/tsc-wrapped": "^4.0.1",
     "google-closure-compiler": "20170218.0.0",
-    "rxjs": "5.0.3",
+    "rxjs": "5.3.0",
+    "rxjs-src": "https://github.com/ReactiveX/rxjs/tarball/5.3.0",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
     "typescript": "~2.1",
@@ -22,8 +22,10 @@
     "build_rxjs_es5esm": "tsc -p vendor/tsconfig.rxjs-es5+esm.json",
     "build_rxjs_es6": "tsc -p vendor/tsconfig.rxjs-es6.json",
     "build_rxjs_tsickle": "node ./node_modules/@angular/tsc-wrapped/src/main -p vendor/tsconfig.rxjs-tsickle.json",
-    "postinstall": "npm run build_rxjs_es5esm",
-    "build": "ngc && ./build_closure.sh",
+    "postinstall": "npm run build_rxjs_es6",
+    "build": "ngc && npm run closure && ./size_report.sh",
+    "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf $(find vendor/built/rxjs -name \\*.js) $(find built -name \\*.js)",
+
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
