Include a third-party node dependency

--- a/closure.conf
+++ b/closure.conf
@@ -10,7 +10,8 @@
 --dependency_mode=STRICT
 --rewrite_polyfills=false
 
---entry_point=./built/bootstrap
+--js vendor/built/rxjs/**.js
+--js_module_root=vendor/built
 
 node_modules/@angular/core/@angular/core.js
 --js_module_root=node_modules/@angular/core
@@ -19,7 +20,12 @@ node_modules/@angular/common/@angular/common.js
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
+node_modules/moment/moment.js
+node_modules/moment/package.json
+--module_resolution=node
+
+--js built/**.js
+--entry_point=./built/bootstrap
+
 vendor/zone_externs.js
 vendor/angular_testability_externs.js
-
---js_module_root=vendor/built
