--- a/package.json
+++ b/package.json
@@ -8,25 +8,31 @@
     "@angular/compiler-cli": "^4.0.1",
     "@angular/core": "^4.0.1",
     "@angular/platform-browser": "^4.0.1",
-    "@angular/platform-server": "^4.0.1",
     "@angular/tsc-wrapped": "^4.0.1",
+    "@types/jasmine": "^2.5.47",
     "google-closure-compiler": "20170218.0.0",
+    "protractor": "^5.1.1",
     "rxjs": "5.3.0",
     "rxjs-src": "https://github.com/ReactiveX/rxjs/tarball/5.3.0",
     "source-map-explorer": "^1.3.3",
     "tsickle": "^0.2.3",
     "typescript": "~2.1",
-    "zone.js": "angular/zone.js"
+    "zone.js": "^0.8.4",
+    "concurrently": "3.1.0",
+    "lite-server": "2.2.2"
   },
   "scripts": {
     "build_rxjs_es5esm": "tsc -p vendor/tsconfig.rxjs-es5+esm.json",
     "build_rxjs_es6": "tsc -p vendor/tsconfig.rxjs-es6.json",
     "build_rxjs_tsickle": "node ./node_modules/@angular/tsc-wrapped/src/main -p vendor/tsconfig.rxjs-tsickle.json",
-    "postinstall": "npm run build_rxjs_es6",
-    "build": "ngc && npm run closure && ./size_report.sh",
+    "postinstall": "yarn run build_rxjs_es6 && webdriver-manager update",
+    "build": "ngc -p src && yarn run closure && ./size_report.sh",
     "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
     "closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
-    "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
+    "serve": "lite-server -c test/browser.config.json",
+    "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map",
+    "pretest": "tsc -p test",
+    "test": "concurrently \"yarn run serve\" protractor --kill-others --success first"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
   "license": "MIT"
