--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,7 @@
         "module": "es2015",
         "moduleResolution": "node",
         "target": "es6",
-        "noImplicitAny": true,
+        "noImplicitAny": false,
         "sourceMap": false,
         "experimentalDecorators": true,
         "outDir": "built",
