--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "build_rxjs_tsickle": "node ./node_modules/@angular/tsc-wrapped/src/main -p vendor/tsconfig.rxjs-tsickle.json",
     "postinstall": "npm run build_rxjs_es6",
     "build": "ngc && npm run closure && ./size_report.sh",
-    "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf $(find vendor/built/rxjs -name \\*.js) $(find built -name \\*.js)",
-
+    "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
+    "closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
