--- a/closure.conf
+++ b/closure.conf
@@ -10,13 +10,18 @@
 --dependency_mode=STRICT
 --rewrite_polyfills=false
 
+vendor/zone_externs.js
+
 --js vendor/built/rxjs/**.js
 --js_module_root=vendor/built
 
 node_modules/@angular/core/@angular/core.js
 --js_module_root=node_modules/@angular/core
+node_modules/@angular/core/src/testability/testability.externs.js
+
 node_modules/@angular/common/@angular/common.js
 --js_module_root=node_modules/@angular/common
+
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
@@ -27,6 +32,3 @@ node_modules/moment/moment.js
 node_modules/moment/package.json		
 --module_resolution=node
 vendor/moment_externs.js
-
-vendor/zone_externs.js
-vendor/angular_testability_externs.js
