remove the last externs

--- a/closure.conf
+++ b/closure.conf
@@ -10,7 +10,7 @@
 --dependency_mode=STRICT
 --rewrite_polyfills=false
 
-vendor/zone_externs.js
+node_modules/zone.js/dist/zone_externs.js
 
 --js vendor/built/rxjs/**.js
 --js_module_root=vendor/built
