--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "scripts": {
     "postinstall": "webdriver-manager update",
     "build": "ngc -p src && yarn run closure && ./size_report.sh",
+    "format": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -i",
     "format:enforce": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
     "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
     "closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
