update closure compiler

--- a/closure.conf
+++ b/closure.conf
@@ -11,6 +11,7 @@
 --rewrite_polyfills=false
 --module_resolution=node
 
+generic_externs.js
 node_modules/zone.js/dist/zone_externs.js
 
 --js node_modules/rxjs/**.js
