A way to bring zone.js into the bundle built by closure. This takes about 900 bytes off of the final compressed package size.

--- a/closure.conf
+++ b/closure.conf
@@ -26,5 +26,8 @@ node_modules/@angular/common/@angular/common.js
 node_modules/@angular/platform-browser/@angular/platform-browser.js
 --js_module_root=node_modules/@angular/platform-browser
 
+node_modules/zone.js/dist/zone.js
+--js_module_root=node_modules/zone-js/dist/zone
+
 --js built/**.js
 --entry_point=./built/bootstrap
