--- a/package.json
+++ b/package.json
@@ -2,39 +2,44 @@
   "name": "closure-compiler-angular-bundling",
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
+  "dependencies": {
+    "@angular/common": "4.3.0",
+    "@angular/core": "4.3.0",
+    "@angular/platform-browser": "4.3.0",
+    "@angular/tsc-wrapped": "4.3.0",
+    "express": "^4.15.4",
+    "rxjs": "^5.4.3",
+    "zone.js": "^0.8.16"
+  },
   "devDependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/tsc-wrapped": "^4.1.3",
-    "@types/jasmine": "^2.5.47",
-    "clang-format": "^1.0.52",
+    "@angular/compiler": "4.3.0",
+    "@angular/compiler-cli": "4.3.0",
+    "@types/express": "^4.0.36",
+    "@types/node": "^8.0.22",
+    "clang-format": "^1.0.53",
     "concurrently": "3.4.0",
     "google-closure-compiler": "20170409.0.0",
-    "lite-server": "2.3.0",
+    "protobufjs": "^5.0.2",
     "protractor": "^5.1.2",
-    "rxjs": "5.4.0",
-    "source-map-explorer": "^1.3.3",
-    "tsickle": "^0.21.6",
-    "typescript": "~2.1",
-    "zone.js": "^0.8.11"
-  },
-  "dependencies": {
-    "moment": "2.18.1"
+    "rimraf": "^2.6.1",
+    "source-map-explorer": "^1.4.0",
+    "typescript": "~2.3.4"
   },
   "scripts": {
     "postinstall": "webdriver-manager update",
-    "build": "ngc -p src && yarn run closure && ./size_report.sh",
+    "build": "yarn run build:client && yarn run build:server && yarn run build:dist",
+    "build:client": "ngc -p src/client && yarn run closure && ./size_report.sh && cp src/client/index.html dist",
+    "build:server": "bazel build ng_libs && bazel build src/server",
+    "build:dist": "cp -r dist bazel-bin",
     "format": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -i",
     "format:enforce": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
     "closure": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf",
     "closure-debug": "java -jar node_modules/google-closure-compiler/compiler.jar --flagfile closure.conf --debug --formatting PRETTY_PRINT",
-    "serve": "lite-server -c test/browser.config.json",
+    "serve": "node ./bazel-bin/src/server/main.js",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map",
     "pretest": "tsc -p test",
-    "test": "concurrently \"yarn run serve\" protractor --kill-others --success first"
+    "test": "concurrently \"yarn run serve\" protractor --kill-others --success first",
+    "clean": "rimraf built && rimraf dist && rimraf src/client/ngfactory && bazel clean"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
   "license": "MIT"
