--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/compiler": "4.3.0",
     "@angular/compiler-cli": "4.3.0",
     "@types/express": "^4.0.36",
+    "@types/jasmine": "^2.5.53",
     "@types/node": "^8.0.22",
     "clang-format": "^1.0.53",
     "concurrently": "3.4.0",
