--- a/closure.conf
+++ b/closure.conf
@@ -9,22 +9,27 @@
 --warning_level=QUIET
 --dependency_mode=STRICT
 --rewrite_polyfills=false
---module_resolution=node
+--module_resolution=NODE
+--jscomp_off=checkVars
 
-node_modules/zone.js/dist/zone_externs.js
+--externs node_modules/zone.js/dist/zone_externs.js
+--externs node_modules/@angular/core/src/testability/testability.externs.js
 
 --js node_modules/rxjs/**.js
---process_common_js_modules
 
-node_modules/@angular/core/@angular/core.js
---js_module_root=node_modules/@angular/core
-node_modules/@angular/core/src/testability/testability.externs.js
+--js node_modules/@angular/core/package.json
+--js node_modules/@angular/core/esm15/index.js
 
-node_modules/@angular/common/@angular/common.js
---js_module_root=node_modules/@angular/common
+--js node_modules/@angular/common/package.json
+--js node_modules/@angular/common/esm15/index.js
 
-node_modules/@angular/platform-browser/@angular/platform-browser.js
---js_module_root=node_modules/@angular/platform-browser
+--js node_modules/@angular/platform-browser/package.json
+--js node_modules/@angular/platform-browser/esm15/index.js
 
 --js built/**.js
---entry_point=./built/bootstrap
+--js_module_root=built
+
+--package_json_entry_names es2015
+--process_common_js_modules
+
+--entry_point=./built/src/bootstrap
