--- a/package.json
+++ b/package.json
@@ -3,26 +3,22 @@
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "devDependencies": {
-    "@angular/common": "^4.1.3",
-    "@angular/compiler": "^4.1.3",
-    "@angular/compiler-cli": "^4.1.3",
-    "@angular/core": "^4.1.3",
-    "@angular/platform-browser": "^4.1.3",
-    "@angular/tsc-wrapped": "^4.1.3",
+    "@angular/common": "5.0.0-beta.7",
+    "@angular/compiler": "5.0.0-beta.7",
+    "@angular/compiler-cli": "5.0.0-beta.7",
+    "@angular/core": "5.0.0-beta.7",
+    "@angular/platform-browser": "5.0.0-beta.7",
+    "@angular/tsc-wrapped": "5.0.0-beta.7",
     "@types/jasmine": "^2.5.47",
-    "clang-format": "^1.0.52",
+    "clang-format": "^1.0.55",
     "concurrently": "3.4.0",
-    "google-closure-compiler": "20170409.0.0",
+    "google-closure-compiler": "git+https://github.com/gregmagolan/closure-compiler.git#20170919.angular.dist",
     "lite-server": "2.3.0",
     "protractor": "^5.1.2",
-    "rxjs": "5.4.0",
-    "source-map-explorer": "^1.3.3",
-    "tsickle": "^0.21.6",
-    "typescript": "~2.1",
-    "zone.js": "^0.8.11"
-  },
-  "dependencies": {
-    "moment": "2.18.1"
+    "rxjs": "^5.4.3",
+    "source-map-explorer": "^1.5.0",
+    "typescript": "~2.4.2",
+    "zone.js": "^0.8.17"
   },
   "scripts": {
     "postinstall": "webdriver-manager update",
@@ -34,7 +30,8 @@
     "serve": "lite-server -c test/browser.config.json",
     "explore": "source-map-explorer dist/bundle.js dist/bundle.js.map",
     "pretest": "tsc -p test",
-    "test": "concurrently \"yarn run serve\" protractor --kill-others --success first"
+    "test": "concurrently \"yarn run serve\" protractor --kill-others --success first",
+    "clean:all": "rimraf ./dist"
   },
   "author": "Alex Eagle <alexeagle@google.com> (https://angular.io/)",
   "license": "MIT"
