--- a/package.json
+++ b/package.json
@@ -3,12 +3,11 @@
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "devDependencies": {
-    "@angular/common": "5.0.0-beta.7",
-    "@angular/compiler": "5.0.0-beta.7",
-    "@angular/compiler-cli": "5.0.0-beta.7",
-    "@angular/core": "5.0.0-beta.7",
-    "@angular/platform-browser": "5.0.0-beta.7",
-    "@angular/tsc-wrapped": "5.0.0-beta.7",
+    "@angular/common": "5.0.0-rc.0",
+    "@angular/compiler": "5.0.0-rc.0",
+    "@angular/compiler-cli": "5.0.0-rc.0",
+    "@angular/core": "5.0.0-rc.0",
+    "@angular/platform-browser": "5.0.0-rc.0",
     "@types/jasmine": "^2.5.47",
     "clang-format": "^1.0.55",
     "concurrently": "3.4.0",
