upgrade angular to 5.0.1 and closure compiler to 20171023.0.1

--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "devDependencies": {
-    "@angular/common": "5.0.0-rc.0",
-    "@angular/compiler": "5.0.0-rc.0",
-    "@angular/compiler-cli": "5.0.0-rc.0",
-    "@angular/core": "5.0.0-rc.0",
-    "@angular/platform-browser": "5.0.0-rc.0",
+    "@angular/common": "5.0.1",
+    "@angular/compiler": "5.0.1",
+    "@angular/compiler-cli": "5.0.1",
+    "@angular/core": "5.0.1",
+    "@angular/platform-browser": "5.0.1",
     "@types/jasmine": "^2.5.47",
     "clang-format": "^1.0.55",
     "concurrently": "3.4.0",
-    "google-closure-compiler": "git+https://github.com/gregmagolan/closure-compiler.git#20170919.angular.dist",
+    "google-closure-compiler": "20171023.0.1",
     "lite-server": "2.3.0",
     "protractor": "^5.1.2",
     "rxjs": "^5.4.3",
