--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
   "devDependencies": {
-    "@angular/common": "5.0.1",
-    "@angular/compiler": "5.0.1",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/core": "5.0.1",
-    "@angular/platform-browser": "5.0.1",
+    "@angular/common": "5.1.2",
+    "@angular/compiler": "5.1.2",
+    "@angular/compiler-cli": "5.1.2",
+    "@angular/core": "5.1.2",
+    "@angular/platform-browser": "5.1.2",
     "@types/jasmine": "^2.5.47",
     "clang-format": "^1.0.55",
     "concurrently": "3.4.0",
-    "google-closure-compiler": "20171023.0.1",
+    "google-closure-compiler": "20171203.0.0",
     "lite-server": "2.3.0",
     "protractor": "^5.1.2",
-    "rxjs": "^5.4.3",
+    "rxjs": "^5.5.6",
     "source-map-explorer": "^1.5.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.17"
+    "typescript": "~2.5.x",
+    "zone.js": "^0.8.19"
   },
   "scripts": {
     "postinstall": "webdriver-manager update",
