--- a/closure.conf
+++ b/closure.conf
@@ -9,26 +9,29 @@
 --warning_level=QUIET
 --dependency_mode=STRICT
 --rewrite_polyfills=false
---module_resolution=NODE
 --jscomp_off=checkVars
 
---externs node_modules/zone.js/dist/zone_externs.js
---externs node_modules/@angular/core/src/testability/testability.externs.js
+node_modules/zone.js/dist/zone_externs.js
 
---js node_modules/rxjs/**.js
+--js node_modules/rxjs/package.json
+--js node_modules/rxjs/_esm2015/index.js
+--js node_modules/rxjs/_esm2015/internal/**.js
+--js node_modules/rxjs/operators/package.json
+--js node_modules/rxjs/_esm2015/operators/index.js
 
 --js node_modules/@angular/core/package.json
---js node_modules/@angular/core/esm2015/core.js
+--js node_modules/@angular/core/fesm2015/core.js
+--js node_modules/@angular/core/src/testability/testability.externs.js
 
 --js node_modules/@angular/common/package.json
---js node_modules/@angular/common/esm2015/common.js
+--js node_modules/@angular/common/fesm2015/common.js
 
 --js node_modules/@angular/platform-browser/package.json
---js node_modules/@angular/platform-browser/esm2015/platform-browser.js
+--js node_modules/@angular/platform-browser/fesm2015/platform-browser.js
 
---js built/**.js
-
+--module_resolution=node
 --package_json_entry_names es2015
 --process_common_js_modules
 
---entry_point=./built/src/bootstrap
+--js built/**.js
+--entry_point=built/src/bootstrap
