--- a/package.json
+++ b/package.json
@@ -2,22 +2,26 @@
   "name": "closure-compiler-angular-bundling",
   "version": "1.0.0",
   "description": "Demonstrate Angular app bundled and optimized by Google Closure Compiler",
+  "dependencies": {
+    "@angular/animations": "^6.0.0",
+    "@angular/common": "^6.0.0",
+    "@angular/compiler": "^6.0.0",
+    "@angular/compiler-cli": "^6.0.0",
+    "@angular/core": "^6.0.0",
+    "@angular/platform-browser": "^6.0.0",
+    "@angular/platform-server": "^6.0.0",
+    "google-closure-compiler": "20180319.0.0",
+    "rxjs": "^6.0.0",
+    "typescript": "~2.7.2",
+    "zone.js": "^0.8.26"
+  },
   "devDependencies": {
-    "@angular/common": "5.0.1",
-    "@angular/compiler": "5.0.1",
-    "@angular/compiler-cli": "5.0.1",
-    "@angular/core": "5.0.1",
-    "@angular/platform-browser": "5.0.1",
-    "@types/jasmine": "^2.5.47",
+    "@types/jasmine": "2.5.41",
     "clang-format": "^1.0.55",
     "concurrently": "3.4.0",
-    "google-closure-compiler": "20171023.0.1",
-    "lite-server": "2.3.0",
+    "lite-server": "2.2.2",
     "protractor": "^5.1.2",
-    "rxjs": "^5.4.3",
-    "source-map-explorer": "^1.5.0",
-    "typescript": "~2.4.2",
-    "zone.js": "^0.8.17"
+    "source-map-explorer": "^1.5.0"
   },
   "scripts": {
     "postinstall": "webdriver-manager update",
