--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "source-map-explorer": "^1.5.0"
   },
   "scripts": {
-    "postinstall": "webdriver-manager update",
+    "postinstall": "webdriver-manager update --gecko false --standalone false $CHROMEDRIVER_VERSION_ARG",
     "build": "ngc -p src && yarn run closure && ./size_report.sh",
     "format": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -i",
     "format:enforce": "clang-format --glob='{{src,test}/**/,}*.{js,ts}' -output-replacements-xml | grep -c offset | grep 0",
